--- a/calculator.html
+++ b/calculator.html
@@ -1,1 +1,102 @@
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial scale=1.0">
+<title> IM </title>
+<style>
+*{
+margin:0;
+padding:0;
+}
+h1{
+text-align:center;
+}
+.card{
+margin:0 auto;
+max-width:350px;
+text-align:center;
+margin-top:10px;
+box-shadow:0 4px 8px 0 rgb(0,0,0,0.2);
+transition:0.3s;
+font-size:0;
+}
+.card:hover{
 
+box-shadow:0 16px 32px 0 rgb(0,0,0,0.2);
+}
+.cal-head #result{
+width:335px;
+height:100px;
+font-size:32px;
+font-weight:bold;
+text-align:right;
+padding:0 5px;
+letter-spacing:3px;
+}
+.btn{
+width:87px;
+height:70px;
+font-weight:bold;
+font-size:16px;
+background-color:#1f2326;
+color:white;
+
+}
+.btn-style{
+background-color:#5F4BB6;
+}
+.btn:hover{
+background-color:pink;
+}
+</style>
+
+</head>
+<body>
+<h1>Calculator</h1>
+<div class="card">
+<div class="cal-head">
+<input type="text" id="result" maxlength="10">
+</div>
+
+<div class="cal-body">
+<div>
+<input type="button" class="btn" value="C">
+<input type="button" class="btn" value="+/-">
+<input type="button" class="btn" value="%">
+<input type="button" class="btn btn-style" value="/">
+</div>
+
+<div>
+<input type="button" class="btn" value="7">
+<input type="button" class="btn" value="8">
+<input type="button" class="btn" value="9">
+<input type="button" class="btn btn-style" value="*">
+</div>
+
+<div>
+<input type="button" class="btn" value="4">
+<input type="button" class="btn" value="5">
+<input type="button" class="btn" value="6">
+<input type="button" class="btn btn-style" value="-">
+</div>
+
+<div>
+<input type="button" class="btn" value="1">
+<input type="button" class="btn" value="2">
+<input type="button" class="btn" value="3">
+<input type="button" class="btn btn-style" value="+">
+</div>
+
+<div>
+<input type="button" class="btn" value="0">
+<input type="button" class="btn" value=".">
+<input type="button" class="btn" value="DEL">
+<input type="button" class="btn" style="background-color:orange" value="=">
+</div>
+
+
+</div>
+</div>
+</body>
+</html>
